[add] 조건검색 : 날짜 검색 완료 - 결국 데이터를 전부 지우고 다시 그려 넣는 방식으로 했다. 도큐먼트가 그지같이 써있다.